--- a/style.css
+++ b/style.css
@@ -1,7 +1,169 @@
-header{
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+    /*  align-self: center;
+    text-align: center; */
+    /*  border: 2px solid red; */
+}
+
+.logo {
+    line-height: 60px;
+    position: fixed;
+    float: left;
+    margin: 16px 46px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 20px;
+    letter-spacing: 2px;
+}
+
+nav {
+    position: fixed;
+    width: 100%;
+    line-height: 60px;
+}
+
+nav ul {
+    line-height: 60px;
+    list-style: none;
+    background: rgba(0, 0, 0, 0);
+    overflow: hidden;
+    color: #fff;
+    padding: 0;
+    text-align: center;
+    margin: 0;
+    padding-right: 40px;
+    transition: 2s;
+    /* border: 2px solid red; */
+}
+
+nav.black ul {
+    background: #000;
+}
+
+nav ul li {
+    display: inline-block;
+    padding: 16px 40px;
+    ;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+}
+
+.menu-icon {
+    line-height: 60px;
+    width: 100%;
+    background: #000;
+    text-align: right;
+    box-sizing: border-box;
+    padding: 15px 24px;
+    cursor: pointer;
+    color: #fff;
+    display: none;
+}
+
+/* .menu {
+    display: flex;
+    flex-direction: row;
+} */
+
+body {
+    background-color: rgb(0, 0, 0);
+}
+
+#platforms {
+    /* height: 100px; */
+    display: flex;
+    width: 100%;
+    padding-top: 25%;
+    padding-bottom: 25%;
+    justify-content: space-evenly;
+    border: 2px solid red;
+    cursor: pointer;
+
 
 }
 
-body{
-    background-color: black;
+main {
+    display: flex;
+    text-align: center;
+    /* border: 2px solid red;  */
+}
+
+#spotifyicon:hover{
+    color: rgb(30, 215, 96);
+}
+
+#youtubeicon:hover{
+    color: rgb(255, 0, 0);
+}
+
+#applemusicicon:hover{
+    color: rgb(85, 85, 85);
+}
+
+#soundcloudicon:hover{
+    color: rgb(255, 119, 0);
+}
+
+
+
+/* .minhafoto{
+  background-position: center;
+  background-size: cover;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+}
+ */
+footer {
+    display: none;
+}
+
+.icons {
+    font-size: xx-large;
+    color: white;
+
+
+}
+
+
+
+@media(max-width: 768px) {
+
+    .logo {
+        position: fixed;
+        top: 0;
+        margin-top: 16px;
+    }
+
+    nav ul {
+        max-height: 0px;
+        background: #000;
+    }
+
+    nav.black ul {
+        background: #000;
+    }
+
+    .showing {
+        max-height: 34em;
+    }
+
+    nav ul li {
+        box-sizing: border-box;
+        width: 100%;
+        padding: 24px;
+        text-align: center;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
 }
