--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 header {
+    height: 10vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: stretch;
-    /*  align-self: center;
-    text-align: center; */
     /*  border: 2px solid red; */
 }
 
@@ -67,60 +71,129 @@ nav ul li a {
     display: none;
 }
 
+#home {
+    font-size: 2rem;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#bio {
+    font-size: 2rem;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#releases {
+    font-size: 2rem;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#plataformas {
+    font-size: 2rem;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+
 /* .menu {
     display: flex;
     flex-direction: row;
 } */
 
 body {
-    background-color: rgb(0, 0, 0);
-}
-
-#platforms {
-    /* height: 100px; */
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
     display: flex;
+    flex-direction: column;
+    background-color: rgb(0, 0, 0);
+    /* height: 100vh; */
     width: 100%;
-    padding-top: 25%;
-    padding-bottom: 25%;
-    justify-content: space-evenly;
-    border: 2px solid red;
-    cursor: pointer;
-
-
+    /* border: 2px solid red; */
 }
 
 main {
-    display: flex;
+    /* background-color: #f7b42c; */
+    /* background-image: linear-gradient(315deg, #f7b42c 0%, #fc575e 74%); */
+    /* display: block; */
     text-align: center;
-    /* border: 2px solid red;  */
+    scroll-snap-align: start none;
+    /* overflow-y: scroll; */
+    /* scroll-snap-type: y mandatory; */
+    /* border: 2px solid red; */
+    height: 80vh;
 }
 
-#spotifyicon:hover{
+#platforms {
+    display: flex;
+    /* height: 80vh; */
+    scroll-snap-align: start;
+    position: absolute;
+    width: 100%;
+    margin-top: 18%;
+    /* padding-top: 18%; */
+    justify-content: space-evenly;
+    /* border: 2px solid red; */
+    cursor: pointer;
+    scroll-snap-align: start none;
+
+
+}
+
+#biopage {
+    /* background-color: orange; */
+    background-image: url(/Images/Capa\ spotify\ foto\ sorrindo\ 2.jpg);
+    background-attachment: local;
+    background-size: auto;
+    width: 100%;
+    height: 100vh;
+    scroll-snap-align: start none;
+    /* scroll-snap-align: start; */
+    /*  margin-left: 10%;
+    margin-right: 60%;
+    padding-top: 70%;
+    margin-bottom: 15%; */
+    color: white;
+    /* padding-left: 5%;
+    padding-right: 5%; */
+    /*  border: 2px solid red; */
+    justify-content: center;
+    text-align: justify;
+
+}
+
+#texto-bio {
+    height: 50vh;
+    margin-top: 10%;
+    margin-left: 10%;
+    margin-right: 55%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scroll-snap-type: y mandatory;
+    /*  border: 2px solid red; */
+    /*  max-height: 768px; */
+}
+
+#spotifyicon:hover {
     color: rgb(30, 215, 96);
 }
 
-#youtubeicon:hover{
+#youtubeicon:hover {
     color: rgb(255, 0, 0);
 }
 
-#applemusicicon:hover{
+#applemusicicon:hover {
     color: rgb(85, 85, 85);
 }
 
-#soundcloudicon:hover{
+#soundcloudicon:hover {
     color: rgb(255, 119, 0);
 }
 
-
-
-/* .minhafoto{
-  background-position: center;
-  background-size: cover;
-  align-content: center;
-  align-items: center;
-  text-align: center;
+.minhafoto {
+    background-position: center;
+    background-size: auto;
+    align-content: center;
+    align-items: center;
+    text-align: center;
 }
- */
+
 footer {
     display: none;
 }
@@ -164,6 +237,43 @@ footer {
 
     .menu-icon {
         display: block;
+    }
+    
+    #platforms{
+        width: 100%;
+    margin-top: 50%;
+
+    }
+
+    #biopage {
+        background-image: none;
+        background-size: auto;
+        background-position: left;
+        width: 100%;
+        height: 90vh;
+        scroll-snap-align: start none;
+        /* scroll-snap-align: start; */
+        /*  margin-left: 10%;
+        margin-right: 60%;
+        padding-top: 70%;
+        margin-bottom: 15%; */
+        color: white;
+        /* padding-left: 5%;
+        padding-right: 5%; */
+        /*  border: 2px solid red; */
+        justify-content: center;
+        text-align: justify;
+    
+    }
+
+    #texto-bio {
+        height: 70vh;
+        margin-top: 10%;
+        margin-left: 10%;
+        margin-right: 10%;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        scroll-snap-type: y mandatory;
     }
 
 }
