--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ main {
     background-attachment: local;
     background-size: auto;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     scroll-snap-align: start none;
     /* scroll-snap-align: start; */
     /*  margin-left: 10%;
@@ -169,6 +169,43 @@ main {
     /*  border: 2px solid red; */
     /*  max-height: 768px; */
 }
+
+.releases {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100vh;
+    padding: 5%;
+    
+}
+.flex-box{
+    height: 20vh;
+    display: flex;
+    justify-content: space-evenly;
+   /*  border: 2px solid red; */
+
+}
+
+.card {
+    width: 13vw;
+    height: 100%;
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+    padding: 2px 16px;
+}
+
+
+
 
 #spotifyicon:hover {
     color: rgb(30, 215, 96);
@@ -238,10 +275,10 @@ footer {
     .menu-icon {
         display: block;
     }
-    
-    #platforms{
+
+    #platforms {
         width: 100%;
-    margin-top: 50%;
+        margin-top: 50%;
 
     }
 
@@ -263,7 +300,7 @@ footer {
         /*  border: 2px solid red; */
         justify-content: center;
         text-align: justify;
-    
+
     }
 
     #texto-bio {
