--- a/style.css
+++ b/style.css
@@ -98,11 +98,12 @@ nav ul li a {
 } */
 
 body {
-    overflow-y: scroll;
+    overflow-y: auto;
     scroll-snap-type: y mandatory;
     display: flex;
     flex-direction: column;
     background-color: rgb(0, 0, 0);
+    scroll-behavior: smooth;
     /* height: 100vh; */
     width: 100%;
     /* border: 2px solid red; */
@@ -113,11 +114,12 @@ main {
     /* background-image: linear-gradient(315deg, #f7b42c 0%, #fc575e 74%); */
     /* display: block; */
     text-align: center;
-    scroll-snap-align: start none;
-    /* overflow-y: scroll; */
+     /* overflow-y: scroll; */
     /* scroll-snap-type: y mandatory; */
     /* border: 2px solid red; */
     height: 80vh;
+    border-bottom: 2px solid white;
+    scroll-snap-align: start;
 }
 
 #platforms {
@@ -134,6 +136,15 @@ main {
     scroll-snap-align: start none;
 
 
+}
+
+#bio-title{
+    margin-left: 10%;
+    margin-right: 55%;
+    margin-top: 5%;
+    margin-top: ;
+    height: auto;
+    /* border: 2px solid red; */
 }
 
 #biopage {
@@ -155,43 +166,61 @@ main {
     /*  border: 2px solid red; */
     justify-content: center;
     text-align: justify;
+    border-bottom: 2px solid white;
+    scroll-snap-align: start;
 
 }
 
 #texto-bio {
     height: 50vh;
-    margin-top: 10%;
     margin-left: 10%;
     margin-right: 55%;
     overflow-y: scroll;
     overflow-x: hidden;
     scroll-snap-type: y mandatory;
-    /*  border: 2px solid red; */
+     /* border: 2px solid red; */
     /*  max-height: 768px; */
 }
 
 .releases {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     height: 100vh;
     padding: 5%;
-    
+    scroll-snap-align: start;
+
 }
-.flex-box{
-    height: 20vh;
+
+.flex-box {
+    height: 24.5vh;
     display: flex;
     justify-content: space-evenly;
-   /*  border: 2px solid red; */
+    /*  border: 2px solid red; */
 
 }
 
 .card {
+    color: white;
+    text-align: center;
+    background-color: black;
+    font-family: 'Times New Roman', Times, serif;
     width: 13vw;
     height: 100%;
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+    
+}
+h4{
+    font-weight: lighter;
+    font-size: 130%;
+}
+
+.card:hover{
+    border: 2px solid white;
+    transition: 1s;
+    
 }
 
 /* On mouse-over, add a deeper shadow */
