--- a/style.css
+++ b/style.css
@@ -98,14 +98,14 @@ nav ul li a {
 } */
 
 body {
-    overflow-y: auto;
-    scroll-snap-type: y mandatory;
+    height: 280vh;
     display: flex;
     flex-direction: column;
     background-color: rgb(0, 0, 0);
     scroll-behavior: smooth;
     /* height: 100vh; */
     width: 100%;
+
     /* border: 2px solid red; */
 }
 
@@ -114,18 +114,14 @@ main {
     /* background-image: linear-gradient(315deg, #f7b42c 0%, #fc575e 74%); */
     /* display: block; */
     text-align: center;
-     /* overflow-y: scroll; */
-    /* scroll-snap-type: y mandatory; */
     /* border: 2px solid red; */
     height: 80vh;
     border-bottom: 2px solid white;
-    scroll-snap-align: start;
 }
 
 #platforms {
     display: flex;
     /* height: 80vh; */
-    scroll-snap-align: start;
     position: absolute;
     width: 100%;
     margin-top: 18%;
@@ -133,17 +129,15 @@ main {
     justify-content: space-evenly;
     /* border: 2px solid red; */
     cursor: pointer;
-    scroll-snap-align: start none;
-
-
+    /* height: 90vh; */
 }
 
-#bio-title{
+#bio-title {
     margin-left: 10%;
     margin-right: 55%;
     margin-top: 5%;
-    margin-top: ;
     height: auto;
+    font-family: 'Times New Roman', Times, serif;
     /* border: 2px solid red; */
 }
 
@@ -154,8 +148,6 @@ main {
     background-size: auto;
     width: 100%;
     height: 90vh;
-    scroll-snap-align: start none;
-    /* scroll-snap-align: start; */
     /*  margin-left: 10%;
     margin-right: 60%;
     padding-top: 70%;
@@ -167,8 +159,6 @@ main {
     justify-content: center;
     text-align: justify;
     border-bottom: 2px solid white;
-    scroll-snap-align: start;
-
 }
 
 #texto-bio {
@@ -177,9 +167,9 @@ main {
     margin-right: 55%;
     overflow-y: scroll;
     overflow-x: hidden;
-    scroll-snap-type: y mandatory;
-     /* border: 2px solid red; */
-    /*  max-height: 768px; */
+    border-radius: 5%;
+
+    /* border: 2px solid red; */
 }
 
 .releases {
@@ -188,7 +178,7 @@ main {
     justify-content: space-between;
     height: 100vh;
     padding: 5%;
-    scroll-snap-align: start;
+   
 
 }
 
@@ -196,7 +186,7 @@ main {
     height: 24.5vh;
     display: flex;
     justify-content: space-evenly;
-    /*  border: 2px solid red; */
+    
 
 }
 
@@ -210,17 +200,18 @@ main {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    
+
 }
-h4{
+
+h4 {
     font-weight: lighter;
     font-size: 130%;
 }
 
-.card:hover{
+.card:hover {
     border: 2px solid white;
     transition: 1s;
-    
+
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -341,5 +332,42 @@ footer {
         overflow-x: hidden;
         scroll-snap-type: y mandatory;
     }
+
+    .releases {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        height: 100vh;
+        overflow: scroll;
+        padding-top: 15vh;
+    }
+
+    .flex-box {
+        margin-top: 5%;
+        padding: 5%;
+        height: 90vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+
+    }
+
+    .card {
+        color: white;
+        text-align: center;
+        background-color: black;
+        font-family: 'Times New Roman', Times, serif;
+        width: 25vw;
+        height: 100%;
+        /* Add shadows to create the "card" effect */
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+    }
+
+    h4 {
+        font-weight: lighter;
+        font-size: 100%;
+    }
+
 
 }
