--- a/style.css
+++ b/style.css
@@ -23,10 +23,17 @@ header {
     letter-spacing: 2px;
 }
 
+#logo {
+    /* margin-bottom: 5px;
+    margin-top: 5px; */
+    width: 9%;
+}
+
 nav {
     position: fixed;
     width: 100%;
     line-height: 60px;
+
 }
 
 nav ul {
@@ -40,11 +47,13 @@ nav ul {
     margin: 0;
     padding-right: 40px;
     transition: 2s;
+
     /* border: 2px solid red; */
 }
 
 nav.black ul {
     background: #000;
+
 }
 
 nav ul li {
@@ -69,6 +78,7 @@ nav ul li a {
     cursor: pointer;
     color: #fff;
     display: none;
+
 }
 
 #home {
@@ -167,7 +177,6 @@ main {
     margin-right: 55%;
     overflow-y: scroll;
     overflow-x: hidden;
-    border-radius: 5%;
 
     /* border: 2px solid red; */
 }
@@ -178,7 +187,7 @@ main {
     justify-content: space-between;
     height: 100vh;
     padding: 5%;
-   
+
 
 }
 
@@ -186,7 +195,7 @@ main {
     height: 24.5vh;
     display: flex;
     justify-content: space-evenly;
-    
+
 
 }
 
@@ -211,12 +220,13 @@ h4 {
 .card:hover {
     border: 2px solid white;
     transition: 1s;
+    width: 15%;
 
 }
 
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+#home:hover {
+    transition: 1s;
+    height: 55%;
 }
 
 /* Add some padding inside the card container */
