--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ main {
 
 #biopage {
     /* background-color: orange; */
-    background-image: url(/Images/Capa\ spotify\ foto\ sorrindo\ 2.jpg);
+    background-image: url(/MeuRepositorio/Portifólio/S3N0Website/Imagens/Capa_spotify_foto_sorrindo_2.jpg);
     background-attachment: local;
     background-size: auto;
     width: 100%;
