--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ nav {
     position: fixed;
     width: 100%;
     line-height: 60px;
+    background-color: black;
+    z-index: 1;
 
 }
 
@@ -47,6 +49,7 @@ nav ul {
     margin: 0;
     padding-right: 40px;
     transition: 2s;
+
 
     /* border: 2px solid red; */
 }
@@ -101,14 +104,14 @@ nav ul li a {
     font-family: 'Times New Roman', Times, serif;
 }
 
+#contato {
+    font-size: 2rem;
+    font-family: 'Times New Roman', Times, serif;
+}
 
-/* .menu {
-    display: flex;
-    flex-direction: row;
-} */
 
 body {
-    height: 280vh;
+    /* height: 280vh; */
     display: flex;
     flex-direction: column;
     background-color: rgb(0, 0, 0);
@@ -120,32 +123,47 @@ body {
 }
 
 main {
-    /* background-color: #f7b42c; */
-    /* background-image: linear-gradient(315deg, #f7b42c 0%, #fc575e 74%); */
-    /* display: block; */
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    /* border: 2px solid red; */
-    height: 80vh;
+    align-items: center;
+   /*  border: 2px solid red; */
+    height: 100vh;
     border-bottom: 2px solid white;
+    padding-top: 15%;
+    padding-bottom: 15%;
 }
 
+#mensagems3n0 {
+    color: white;
+    margin-top: 10%;
+    font-size: 500%;
+  /*   border: 1px solid red; */
+    font-family: 'Dancing Script', cursive;
+    /* font-family: 'Montserrat', sans-serif; */
+    /* font-family: 'Yusei Magic', sans-serif; */
+}
+
+
 #platforms {
+    align-items: center;
     display: flex;
     /* height: 80vh; */
     position: absolute;
     width: 100%;
-    margin-top: 18%;
+    margin-top: 2%;
     /* padding-top: 18%; */
     justify-content: space-evenly;
-    /* border: 2px solid red; */
+  /*   border: 2px solid red; */
     cursor: pointer;
     /* height: 90vh; */
+    z-index: 0;
 }
 
 #bio-title {
     margin-left: 10%;
     margin-right: 55%;
-    margin-top: 5%;
+    margin-top: 10%;
     height: auto;
     font-family: 'Times New Roman', Times, serif;
     /* border: 2px solid red; */
@@ -157,7 +175,7 @@ main {
     background-attachment: local;
     background-size: auto;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     /*  margin-left: 10%;
     margin-right: 60%;
     padding-top: 70%;
@@ -186,7 +204,8 @@ main {
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
-    padding: 5%;
+    padding: 2%;
+    border-bottom: 2px solid white;
 
 
 }
@@ -212,16 +231,38 @@ main {
 
 }
 
+p {
+    font-weight: lighter;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+
+}
+
+h1 {
+    font-weight: lighter;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 200%;
+    color: WHITE;
+    text-align: center;
+}
+
 h4 {
     font-weight: lighter;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 130%;
 }
 
+h5 {
+    font-weight: lighter;
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
+}
+
+
 .card:hover {
     border: 2px solid white;
-    transition: 1s;
-    width: 15%;
-
+    transition: 100ms;
+    opacity: 60%;
 }
 
 #home:hover {
@@ -253,6 +294,15 @@ h4 {
     color: rgb(255, 119, 0);
 }
 
+#instagramicon:hover {
+
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    -webkit-background-clip: text;
+    /* Also define standard property for compatibility */
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 .minhafoto {
     background-position: center;
     background-size: auto;
@@ -261,9 +311,6 @@ h4 {
     text-align: center;
 }
 
-footer {
-    display: none;
-}
 
 .icons {
     font-size: xx-large;
@@ -272,6 +319,61 @@ footer {
 
 }
 
+#formulario {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 2%;
+
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    height: 10vh;
+    width: 100%;
+    border-top: 1px solid white;
+    position: relative;
+    background-color: black;
+}
+
+#footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* border: 1px solid red; */
+    padding-left: 2%;
+    padding-right: 2%;
+
+}
+
+#links-footer {
+    align-items: center;
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+    /* border: 1px solid red; */
+}
+
+#direitos-reservados {
+    align-items: center;
+    color: white;
+    display: flex;
+
+    /* border: 1px solid red; */
+}
+
+#msg {
+    align-items: center;
+    color: white;
+    display: flex;
+
+}
 
 
 @media(max-width: 768px) {
