--- a/style.css
+++ b/style.css
@@ -199,12 +199,21 @@ main {
     /* border: 2px solid red; */
 }
 
+#releases-title {
+    margin-top: 3%;
+    font-size: 250%;
+}
+
 .releases {
+    margin-top: 2%;
+    padding-bottom: 2%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
-    height: 100vh;
-    padding: 2%;
+    gap: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
     border-bottom: 2px solid white;
 
 
@@ -449,9 +458,10 @@ footer {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-        height: 100vh;
+        flex-wrap: wrap;
         overflow: scroll;
-        padding-top: 15vh;
+        padding-top: 2%;
+        padding-bottom: 2%;
     }
 
     .flex-box {
