--- a/style.css
+++ b/style.css
@@ -170,20 +170,15 @@ main {
 }
 
 #biopage {
-    /* background-color: orange; */
+
     background-image: url(/MeuRepositorio/Portifólio/S3N0Website/Imagens/Capa_spotify_foto_sorrindo_2.jpg);
-    background-attachment: local;
-    background-size: auto;
+    background-attachment: fixed;
+    background-size: 140%;
     width: 100%;
     height: 100vh;
-    /*  margin-left: 10%;
-    margin-right: 60%;
-    padding-top: 70%;
-    margin-bottom: 15%; */
+
     color: white;
-    /* padding-left: 5%;
-    padding-right: 5%; */
-    /*  border: 2px solid red; */
+
     justify-content: center;
     text-align: justify;
     border-bottom: 2px solid white;
@@ -243,6 +238,7 @@ main {
 p {
     font-weight: lighter;
     color: white;
+    font-size: 150%;
     font-family: 'Times New Roman', Times, serif;
 
 }
@@ -383,8 +379,11 @@ footer {
     align-items: center;
     margin-top: 5%;
     display: flex;
-    justify-content: space-between;
-    /* border: 1px solid red; */
+    justify-content: start;
+    border: 1px solid red;
+    width: 30vw;
+    gap: 4.2%;
+
 }
 
 
@@ -393,15 +392,24 @@ footer {
     align-items: center;
     color: white;
     display: flex;
+    width: 30vw;
+    text-align: center;
+    justify-content: center;
+    font-size: 140%;
 
-    /* border: 1px solid red; */
+
+    border: 1px solid red;
 }
 
 #msg {
+    width: 30vw;
     align-items: center;
     color: white;
     display: flex;
     font-family: 'Dancing Script', cursive;
+    border: 1px solid red;
+    justify-content: center;
+    font-size: 200%;
 
 }
 
@@ -459,6 +467,7 @@ footer {
     #spotifyicon {
         font-size: 3rem;
     }
+
     #spotifyicon2 {
         font-size: 1.2rem;
     }
@@ -610,7 +619,7 @@ footer {
         justify-content: space-between;
         width: 30vw;
         /* border: 1px solid red; */
-        
+
 
     }
 
